# getopt

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  article.md  conanfile.py  getopt.h  getopt.sln  getopt.vcxproj  windows-clang  windows-msvc
.github/workflows/: ci.yaml
